WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33019
[Qt] Fix warnings in MediaPlayerPrivatePhonon.cpp
https://bugs.webkit.org/show_bug.cgi?id=33019
Summary
[Qt] Fix warnings in MediaPlayerPrivatePhonon.cpp
Laszlo Gombos
Reported
2009-12-29 07:06:23 PST
In debug builds: WebCore/platform/graphics/qt/MediaPlayerPrivatePhonon.cpp: In member function ‘void WebCore::MediaPlayerPrivate::totalTimeChanged(qint64)’: WebCore/platform/graphics/qt/MediaPlayerPrivatePhonon.cpp:505: warning: format ‘%d’ expects type ‘int’, but argument 3 has type ‘qint64’ In release builds: WebCore/platform/graphics/qt/MediaPlayerPrivatePhonon.cpp:511: WebCore/platform/graphics/qt/MediaPlayerPrivatePhonon.cpp:49: warning: ‘QByteArray debugMediaObject(WebCore::MediaPlayerPrivate*, const Phonon::MediaObject&)’ defined but not used
Attachments
proposed patch
(1.68 KB, patch)
2009-12-29 07:23 PST
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2009-12-29 07:23:03 PST
Created
attachment 45601
[details]
proposed patch
WebKit Commit Bot
Comment 2
2009-12-29 07:33:05 PST
Comment on
attachment 45601
[details]
proposed patch Clearing flags on attachment: 45601 Committed
r52621
: <
http://trac.webkit.org/changeset/52621
>
WebKit Commit Bot
Comment 3
2009-12-29 07:33:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug