2009-12-29  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix warnings in MediaPlayerPrivatePhonon.cpp
        https://bugs.webkit.org/show_bug.cgi?id=33019

        No new tests as there is no new functionality.

        * platform/graphics/qt/MediaPlayerPrivatePhonon.cpp:
        (WebCore::MediaPlayerPrivate::totalTimeChanged):


Canonical link: https://commits.webkit.org/44034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52621 268f45cc-cd09-0410-ab3c-d52691b4dbfc